--- a/css/table-twbs.css
+++ b/css/table-twbs.css
@@ -2,18 +2,19 @@
   cursor: pointer;
   text-align: center;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
+
 .table .empty-cell {
   font-style: italic;
   color: darkgray;
   cursor: default;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .sort-icon:after {
@@ -26,6 +27,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.sort-icon.sort-ascending:after  { content: '\f0de'; }
-.sort-icon.sort-descending:after { content: '\f0dd'; }
-.sort-icon.sort-none:after  { content: '\f0dc'; }
+
+.sort-icon.sort-ascending:after {
+  content: '\f0de';
+}
+
+.sort-icon.sort-descending:after {
+  content: '\f0dd';
+}
+
+.sort-icon.sort-none:after {
+  content: '\f0dc';
+}
